--- a/gb/19/10/9/n11579151.md
+++ b/gb/19/10/9/n11579151.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jokqkt383/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jokqkt383/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jokqkt383/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jokqkt383/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jokqkt383/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>调查：大部分小老板 工时长 休假少</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1112257313-600x400.jpg" />
 <h6>调查显示，2/3小企业主比自己当雇员时，工作时间更长，更辛苦。（Shutterstock）
 </h6>
 <hr>
-<p>【大纪元2019年10月10日讯】（大纪元记者李平多伦多编译报导）许多人认为，自己创业当老板很惬意。但最新调查发现，许多人辞职创业后，不仅工作比以往更辛苦，而且<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>更少，休闲娱乐时间也更少。</p>
-<p>据CBC报导，8月8日至18日，帝银委托Maru/Blue 调研公司所做网调发现，在接受调查的1,005名小业主中，2/3称创业后工作时间更长；61%称当老板后比以前上班压力更大；10人中近4人表示今年很少<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>或根本没休过假；60%称有时需腾出时间却无法抽身；54%称自从创业后，放弃了以前多数业余爱好和休闲活动。</p>
+<p>【大纪元2019年10月10日讯】（大纪元记者李平多伦多编译报导）许多人认为，自己创业当老板很惬意。但最新调查发现，许多人辞职创业后，不仅工作比以往更辛苦，而且<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>更少，休闲娱乐时间也更少。</p>
+<p>据CBC报导，8月8日至18日，帝银委托Maru/Blue 调研公司所做网调发现，在接受调查的1,005名小业主中，2/3称创业后工作时间更长；61%称当老板后比以前上班压力更大；10人中近4人表示今年很少<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%91%E5%81%87.md#1">休假</a>或根本没休过假；60%称有时需腾出时间却无法抽身；54%称自从创业后，放弃了以前多数业余爱好和休闲活动。</p>
 <p>负责调查监管的帝银高级副总裁特恩布尔（Andrew Turnbull）表示，现代社会企业发展比过去更快，产品和服务比过去更快推出，许多小老板都是超负荷工作，几乎没有个人业余时间，很难实现工作生活平衡。</p>
 <h2>当老板压力大 休息少</h2>
 <p>维多利亚Red Seal Recruiting Solutions人力资源公司创办人坎贝尔（Kael Campbell）自从创业后，每天工作到晚8点，上班时间电话不断，有时还要陪客户喝酒吃饭，根本没时间从事自己喜欢的户外活动。儿子出生后，他开始重新调整作息，将工作和生活时间完全分开，将家庭放在首位，然后是身体健康，再其次是公司和事业。</p>
@@ -17,54 +17,54 @@
 <h2>当老板不等于累垮自己</h2>
 <p>Workaroun共用工作空间老板蒙迪女士（Amanda Munday）创业后，多名医生警告她，她快要累垮了，她听不进去，结果病了，1年内2度感染肺炎。在忙工作的同时，她还要照顾两个孩子。</p>
 <p>蒙迪称，人们谈到创业当老板，就意味着要长时间工作，谈到工作累垮了，就认为是累到自己快死了，要整天工作才配当老板。有其他当老板的人说，做托儿所，创业第1年根本不能脱开身，但她还是带家人休了两周假。她说，她的业务就是方便职业父母，让他们能更轻松工作，如果她都不能做个工作休闲兼顾的榜样，生意就做不下去了。</p>
-<p>特恩布尔称，企业主是<ahref="https://github.com/jokqkt383/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>经济的命脉，不仅需要正常的休假和休息，还需要政府支持，减少各类监管壁垒，提高加拿大创新竞争力，让加拿大产品和服务不仅走向其它省，还要走向世界。</p>
+<p>特恩布尔称，企业主是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>经济的命脉，不仅需要正常的休假和休息，还需要政府支持，减少各类监管壁垒，提高加拿大创新竞争力，让加拿大产品和服务不仅走向其它省，还要走向世界。</p>
 <p>责任编辑：文芳</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/8/2/n11424556.md#1">亚省乡村移民计划将开始咨询</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/8/7/n11438341.md#1">亚洲人喜欢移民萨省 省府目标：留住八成移民</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/9/15/n11523549.md#1">吸引专业人士 亚省推“优势移民战略”</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/9/16/n11523900.md#1">自由党承诺：中小初创公司可获5万元资助</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/9/26/n11548864.md#1">涉造假?中国“成功企业家”被加国遣返</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/19/n12959283.md#1">加拿大各省最新疫情数据 （6月5日）</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997340.md#1">抵加航空旅客拒住酒店检疫 周五起罚五千</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997387.md#1">研究：高剂量维生素 D 或不能预防 COVID-19</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997373.md#1">加拿大 COVID-19 疫苗接种率已列世界前茅</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997371.md#1">安省新蓝桶计划将于 2023 年始分段实施</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/2/n11424556.md#1">亚省乡村移民计划将开始咨询</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/7/n11438341.md#1">亚洲人喜欢移民萨省 省府目标：留住八成移民</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/15/n11523549.md#1">吸引专业人士 亚省推“优势移民战略”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/16/n11523900.md#1">自由党承诺：中小初创公司可获5万元资助</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/26/n11548864.md#1">涉造假?中国“成功企业家”被加国遣返</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687158.md#1">卑诗省政府大量删除“过时”性别用语</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687147.md#1">加拿大经济一月份小幅增长0.2%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687086.md#1">渥京考虑对SUV和皮卡车额外征税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687035.md#1">联邦审查Flair 加国廉航或失经营执照</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13684629.md#1">保守党：特鲁多2030年减排目标不现实</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513377.md#1" target="_blank">土改中的按比例杀人与反人类酷刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/5/28/n12982017.md#1">瘟神散疫失误错杀人 轮回堕凡间偿罪</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12992137.md#1">【忠义传】以身挡敌 曹操的首席保镖典韦</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999736.md#1">【远见快评】为何勿忘六四？日本醒悟痛击中共</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13001990.md#1">【新闻看点】广州全城检测 7市5600医护驰援</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/5/n13000497.md#1">【拍案惊奇】7常委6?4经历 疫源证人藏美情报局？</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997119.md#1">美禁投资59中共军工及监控企业 名单一览</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996466.md#1">组图：六四现场回顾 天安门广场一夕变色</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12998543.md#1">在火星上拍到闪光云 云里有冰晶</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997045.md#1">邓紫棋中国献唱疑自我审查 敏感字眼遭修改歌词</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999803.md#1">胡歌观看前女友演音乐剧 分手12年再传复合？</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12999132.md#1">林志玲护台抗疫 隔海捐6座“正压检疫亭”</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000154.md#1">蒋欣晒吃饭自拍照 网民：难怪能瘦那么多</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n13000002.md#1">一众港星悼“六四” 杜汶泽讽中共掩盖罪行</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996124.md#1">几种含丰富营养的超级食品 值得花钱</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/4/n12997785.md#1">新冠疫苗3大副作用 医师教你简单方法缓解</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12997286.md#1">【小宇宙传说】古代瘟疫启示：一些人不染疫</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/3/n12996569.md#1">糖化让你变老、生病！改变烹调方式降糖化12倍</a></li>
-<li><a href="https://github.com/jokqkt383/djy/blob/master/gb/21/6/2/n12993841.md#1">发烧、嗅觉丧失怎么办？新冠7大症状自我缓解</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jokqkt383/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/9/n11579151.htm">调查：大部分小老板 工时长 休假少</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/9/n11579151.htm">调查：大部分小老板 工时长 休假少</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jokqkt383/djy/blob/master/gb/19/10/9/n11579151.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jokqkt383/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jokqkt383/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jokqkt383/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/9/n11579151.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
